compiler/testData/diagnostics/tests/regressions/kt2956.kt
val a: String = <!NO_CLASS_OBJECT!>Nothing<!>